@startuml

title __MODEL's Class Diagram__\n

  namespace com.dna.application.backend {
    namespace model {
      class com.dna.application.backend.model.Alignment {
          - description : String
          - name : String
          + Alignment()
          + Alignment()
          + getDescription()
          + getName()
          + getVisibility()
          + setDescription()
          + setName()
          + setVisibility()
      }
    }
  }
  

  namespace com.dna.application.backend {
    namespace model {
      enum Visibility {
        PRIVATE
        PUBLIC
        TOPSECRET
      }
    }
  }
  

  namespace com.dna.application.backend {
    namespace model {
      abstract class com.dna.application.backend.model.BaseEntity {
          - id : Long
          + getId()
      }
    }
  }
  

  namespace com.dna.application.backend {
    namespace model {
      abstract class com.dna.application.backend.model.BaseEntityAudit {
          - createdAt : Date
          - updatedAt : Date
          - updatedBy : String
          + BaseEntityAudit()
          + equals()
          + getCreatedAt()
          + getUpdatedAt()
          + getUpdatedBy()
          + hashCode()
          + setChangeDate()
          + setCreatedAt()
          + setCreationDate()
          + setUpdatedAt()
          + setUpdatedBy()
          + toString()
          # canEqual()
      }
    }
  }
  

  namespace com.dna.application.backend {
    namespace model {
      class com.dna.application.backend.model.JwtRequest {
          - password : String
          {static} - serialVersionUID : long
          - username : String
          + JwtRequest()
          + JwtRequest()
          + getPassword()
          + getUsername()
          + setPassword()
          + setUsername()
      }
    }
  }
  

  namespace com.dna.application.backend {
    namespace model {
      class com.dna.application.backend.model.JwtResponse {
          - jwttoken : String
          {static} - serialVersionUID : long
          + JwtResponse()
          + getJwttoken()
      }
    }
  }
  

  namespace com.dna.application.backend {
    namespace model {
      class com.dna.application.backend.model.User {
          - email : String
          - password : String
          - username : String
          + User()
          + User()
          + equals()
          + getAuthorities()
          + getEmail()
          + getPassword()
          + getRole()
          + getUsername()
          + hashCode()
          + isAccountNonExpired()
          + isAccountNonLocked()
          + isCredentialsNonExpired()
          + isEnabled()
          + setEmail()
          + setPassword()
          + setRole()
          + setUsername()
          + toString()
          # canEqual()
      }
    }
  }
  

  namespace com.dna.application.backend {
    namespace model {
      enum Role {
        ADMIN
        GUEST
        RESEARCHER
      }
    }
  }
  

  namespace com.dna.application.backend {
    namespace model {
      class com.dna.application.backend.model.UserRequest {
          - email : String
          - id : Long
          - password : String
          - username : String
          + UserUpdateRequest()
          + getEmail()
          + getId()
          + getPassword()
          + getRole()
          + getUsername()
          + setEmail()
          + setId()
          + setPassword()
          + setRole()
          + setUsername()
      }
    }
  }
  

  com.dna.application.backend.model.Alignment -up-|> com.dna.application.backend.model.BaseEntityAudit
  com.dna.application.backend.model.Alignment o-- com.dna.application.backend.model.Alignment.Visibility : visibility
  com.dna.application.backend.model.Alignment +-down- com.dna.application.backend.model.Alignment.Visibility
  com.dna.application.backend.model.BaseEntity .up.|> java.io.Serializable
  com.dna.application.backend.model.BaseEntityAudit .up.|> java.io.Serializable
  com.dna.application.backend.model.BaseEntityAudit -up-|> com.dna.application.backend.model.BaseEntity
  com.dna.application.backend.model.JwtRequest .up.|> java.io.Serializable
  com.dna.application.backend.model.JwtResponse .up.|> java.io.Serializable
  com.dna.application.backend.model.User .up.|> org.springframework.security.core.userdetails.UserDetails
  com.dna.application.backend.model.User -up-|> com.dna.application.backend.model.BaseEntityAudit
  com.dna.application.backend.model.User o-- com.dna.application.backend.model.User.Role : role
  com.dna.application.backend.model.User +-down- com.dna.application.backend.model.User.Role
  com.dna.application.backend.model.UserRequest o-- com.dna.application.backend.model.User.Role : role


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
